--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,11 +1,16 @@
+{{#block "header"}}
 <!DOCTYPE html>
 <html>
   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>{{#block "title"}}Blog{{/block}} </title>
-     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+     <link rel='stylesheet' href='/main.css'>
   </head>
   <body>
-    <div class="container">
+{{/block}}
+    <div class="content">
         {{#block "content"}}{{/block}}
     </div>
   {{#block "footer"}}
